--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css">
 
 
-    <title>Hello, world!</title>
+    <title>Tazkily</title>
 </head>
 
 <body>
@@ -332,8 +332,46 @@
            
 
         </div>
-
     </div>
+    <footer style="background-color: rgba(38, 0, 85, 1);" class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 pt-5 pb-5 ms-5">
+                <h1 class="text-white fw-bold fs-3">Tazkily</h1>
+                <p class="text-white">For businesses who need clarity, productive communication, prioritisation and accountability.</p>
+                <p class="text-white">Made with ❤ by Tazkily Team</p>
+
+            </div>
+            <div class="col-md-2 pt-5 pb-5">
+                <div>
+                    <h6 class="text-white">Useful Links</h6>
+                    <p class="text-white">Try free trial</p>
+                    <p class="text-white">Pricing plan</p>
+                    <p class="text-white">Pricing plan</p>
+                    <p class="text-white">Chrome extentions</p>
+                </div>
+            </div>
+            <div class="col-md-2 pt-5 pb-5">
+                <div>
+                    <h6 class="text-white">Useful Links</h6>
+                    <p class="text-white">Try free trial</p>
+                    <p class="text-white">Pricing plan</p>
+                    <p class="text-white">Pricing plan</p>
+                    <p class="text-white">Chrome extentions</p>
+                </div>
+            </div>
+            <div class="col-md-2 pt-5 pb-5">
+                <div>
+                    <h6 class="text-white">Useful Links</h6>
+                    <p class="text-white">Try free trial</p>
+                    <p class="text-white">Pricing plan</p>
+                    <p class="text-white">Pricing plan</p>
+                    <p class="text-white">Chrome extentions</p>
+                </div>
+            </div>
+ 
+        </div>
+
+    </footer>
 
 
     <!-- Optional JavaScript; choose one of the two! -->
