padding and margin

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="mb-5" style="background: #3494E6;  /* fallback for old browsers */
+    <div class="mb-5 pb-5" style="background: #3494E6;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #EC6EAD, #3494E6);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #EC6EAD, #3494E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     ">
@@ -88,7 +88,7 @@
 
 
                     </div>
-                    <div class="col-md-6 col-12 d-flex justify-content-end  pb-5 ">
+                    <div class="col-md-6 col-12 d-flex justify-content-end  pb-5 mt-4">
                         <img class="img-fluid border border-2 rounded" src="./images/Capture.JPG" alt="" srcset="">
 
 
